# synth

./: .gitignore  ADVANCED_TECHNIQUES_RESEARCH.md  AGENTS.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  Cargo.toml  INCREMENTAL_PARSER_ROADMAP.md  INCREMENTAL_PARSING_COMPLETE.md  INCREMENTAL_PARSING_STATUS.md  MARKDOWN_PARSER_PERFORMANCE.md  PROGRESS_REPORT.md  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  SUMMARY.md  USAGE.md  biome.json  bun.lockb  bunfig.toml  bunup.config.ts  lefthook.yml  package-lock.json  package.json  project.manifest.json  tsconfig.json  turbo.json
.cargo/: config.toml
.changeset/: doctor-score-improvements.md  fix-readme-docs.md  fix-workspace-deps.md  initial-release.md  typescript-fixes.md
.doctrine/: project.json
benchmarks/: README.md  comparison.bench.ts  (+5 more)
crates/core/: Cargo.toml
crates/core/fixtures/: incremental_batch_golden.json  traverse_golden.json
crates/core/src/: arrow_emit.rs  arrow_method_default_emit.rs  assign_logical_update_emit.rs  assign_sep.rs  assign_sequence_object_emit.rs  assignment_update_member_call_emit.rs  batch.rs  binary_unary_logical_emit.rs  binding_id.rs  block_emit.rs  call_member_emit.rs  call_member_new_emit.rs  child_select.rs  class_emit_kind.rs  class_export_from_emit.rs  class_function_import_export_emit.rs  class_import_export_new_this_super_meta_emit.rs  class_meta_new_this_super_edge_emit.rs  class_meta_new_this_super_emit.rs  class_private_method_accessor_object_emit.rs  class_property_static_decorator_method_emit.rs  class_return_this_super_meta_emit.rs  complexity_types.rs  compressor_engine.rs  conditional_spread_emit.rs  decorator_private_emit.rs  detect_language.rs  do_while_switch_break_continue_try_emit.rs  error.rs  export_class_emit.rs  export_kind.rs  fn_sig_emit.rs  for_throw_label_empty_emit.rs  for_var_assignment_program_import_spec_emit.rs  format_emit.rs  format_indent.rs  format_style.rs  function_class_this_emit.rs  function_decl_emit.rs  function_meta.rs  (+76 more)
crates/core/tests/: incremental_batch_golden.rs  traverse_golden.rs
crates/wasm-js/: Cargo.toml
crates/wasm-js/src/: lexer.rs  lib.rs  parser.rs
crates/wasm-md/: Cargo.toml
crates/wasm-md/src/: fast_parser.rs  fast_tokenizer.rs  lib.rs  parser.rs  parser_v2.rs  tokenizer.rs  turbo_parser.rs
(+104 files in other folders)
