[package]
name = "synth-wasm-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance JavaScript/TypeScript parser for Synth (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
synth-wasm-core = { path = "../core" }
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
memchr = "2.7"

[dev-dependencies]
wasm-bindgen-test.workspace = true
